Add styles/ folder, CSS to device's pages and home page
Learnings from CSS foundations, TOP.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title> The LAB </title>
+        <link rel="stylesheet" href="styles/indx.css">
     </head>
     <body>
-        <h1> Details </h1>
-        <ul>
-            <li> <a href="devices/ip1.html" target="_blank" rel="noreferrer"> IP1 </a></li>
+        <div class="content">
+        <h1 id="heading"> Lab Dashboard </h1>
+        <ul id="list">
+            <li><a href="./devices/ip1.html" target="_blank" rel="noopener noreferrer">406m</a></li>
+            <li><a href="./devices/ip2.html" target="_blank" rel="noopener noreferrer">40-03</a></li>
+            <li><a href="./devices/ip3.html" target="_blank" rel="noopener noreferrer">404f</a></li>
         </ul>
+        </div>
     </body>
 </html>
